--- a/methodology.tex
+++ b/methodology.tex
@@ -12,7 +12,7 @@ The dataset consists in a bit more than 3'000'000 images collected during 80 sur
 
 \subsection{Convolutional neural network architecture and training}
 
-In this study, we used the AlexNet convolutional neural architecture \cite{NIPS2012_4824} trained in Caffe \cite{jia2014caffe}. Few modifications were brought and required to train successfully the AlexNet network. For the classification task, the size of the mini-batches is decreased to 32 samples and learning rate\todo{how is it changed?}. For the classification task, the output layer of the fully connected part of the architecture uses a softmax transfer function to get a probability distribution over the labels and the loss is the cross-entropy classification loss. For the regression task, a linear output transfer function is considered and the loss is the Euclidean loss. Experimentally, it was required to consider a lower learning rate than AlexNet which otherwise lead to a divergent loss. As we shall see in the result section, several strategies for setting the learning rate are considered.
+In this study, we used the AlexNet convolutional neural architecture \cite{NIPS2012_4824} trained in Caffe \cite{jia2014caffe}. The network consists in five convolution/pooling layers followed by three fully connected layers\todo{is it true?}. Few modifications were brought and required to train successfully the AlexNet network. For the classification task, the size of the mini-batches is decreased to 32 samples and learning rate\todo{how is it changed?}. For the classification task, the output layer of the fully connected part of the architecture uses a softmax transfer function to get a probability distribution over the labels and the loss is the cross-entropy classification loss. For the regression task, a linear output transfer function is considered and the loss is the Euclidean loss. Experimentally, it was required to consider a lower learning rate than AlexNet which otherwise lead to a divergent loss. As we shall see in the result section, several strategies for setting the learning rate are considered. For both the regression and classification problems, the architecture is trained with the default CaffeNet settings, namely stochastic gradient descent\todo{what is the algorithm used?}, a momentum set to \todo{??} and a weight decay to \todo{??}, and \todo{??}.
 
 
 \subsection{Extracting season invariant representations}
